--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <p><a href="https://www.github.com/MariaRod123/"  target="_blank" class="github">Github</a>
         <a href="https://www.linkedin.com/in/maria-alejandra-rodriguez-piriz/" target="_blank" class="linkedin">Linkedin</a>
         <a href="https://drive.google.com/drive/folders/1J0TD_efb2HJY43kBvqzZ626-NTfz7pfS" target="_blank" class="curriculum">CV</a>
-        <a href="mailto:marodriguezpiriz08@gmail.com?subject=asunto%20del%20mail" class="correo">Correo</a>
+        <a href="mailto:correo@mail.com" class="correo">Correo</a>
       </p>
       <p> Copyright &copy; 2022 - Creado por María Rodríguez</p>
       </footer>
