--- a/index.html
+++ b/index.html
@@ -42,13 +42,13 @@
     <article class="centrar-contenido"><img src="img/Maria-Rodriguez.jpg" id="img-circular" />
       <br/>
       <br/>
-      <pre><b>
+      <pre><strong>
         Hola a todos !!! 
         Soy María y vivo en Salto, Uruguay.        
         Me considero apasionada por la ciencia y la tecnología. 
         Actualmente me encuentro dando mis primeros pasos en el mundo del desarrollo de software.
         Soy curiosa y me gusta aprender cosas nuevas, también me considero muy observadora y analítica.
-      </b> 
+      </strong> 
       </pre>
     </article>
   </section>
