--- a/contacto.html
+++ b/contacto.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet"   href="css/archivo-estilos.css" type="text/css">
     <title>Contacto</title>
 </head>
 <body>
     <body background="img/background3.png">  
         <nav class="navbar navbar-expand-lg navbar-dark bg">
-          <a class="navbar-brand">Mi portfolio</a>
+          <a class="navbar-brand"><i class="fa-solid fa-house"></i></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>    
@@ -51,11 +52,12 @@
       
     <section>
         <footer>
-        <p><a href="https://www.github.com/MariaRod123/"  target="_blank" class="github">Github</a>
-        <a href="https://www.linkedin.com/in/maria-alejandra-rodriguez-piriz/" target="_blank" class="linkedin">Linkedin</a>
-        <a href="https://drive.google.com/drive/folders/1J0TD_efb2HJY43kBvqzZ626-NTfz7pfS" target="_blank" class="curriculum">CV</a>
-        <a href="mailto:marodriguezpiriz08@gmail.com" class="correo">Correo</a>
-        </p>
+        <p><a href="https://www.github.com/MariaRod123/"  target="_blank" class="github"><i class="fa-brands fa-github"></i></a>
+            <a href="https://www.linkedin.com/in/maria-alejandra-rodriguez-piriz/" target="_blank" class="linkedin"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="https://drive.google.com/drive/folders/1J0TD_efb2HJY43kBvqzZ626-NTfz7pfS" target="_blank" class="curriculum"><i class="fa-solid fa-file"></i></a>
+            <a href="https://www.youtube.com/channel/UC3e8_SA0TDSOl7CeolHaplQ" target="_blank" class="youtube"><i class="fa-brands fa-youtube"></i></a>
+            <a href="mailto:marodriguezpiriz08@gmail.com" class="correo"><i class="fa-solid fa-envelope"></i></a>
+          </p>
         <p>Copyright&copy; 2022 - Creado por María Rodríguez</p>
         </footer>
     </section>
