--- a/index.html
+++ b/index.html
@@ -43,13 +43,12 @@
     <article class="centrar-contenido"><img src="img/Maria-Rodriguez.jpg" id="img-circular" />
       <br/>
       <br/>
-      <pre><h5>
+      <pre>
         Hola a todos !!! 
         Soy María y vivo en Salto, Uruguay.        
         Me considero apasionada por la ciencia y la tecnología. 
         Actualmente me encuentro dando mis primeros pasos en el mundo del desarrollo de software.
         Soy curiosa y me gusta aprender cosas nuevas, también me considero muy observadora y analítica.
-      </h5> 
       </pre>
     </article>
   </section>
