--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body background="img/background3.png" >
     <nav class="navbar navbar-expand-lg navbar-dark bg">
-      <a class="navbar-brand"><i class="fa-solid fa-house"></a>
+      <a class="navbar-brand"><i class="fa-solid fa-house"></i></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button> 
@@ -43,12 +43,13 @@
     <article class="centrar-contenido"><img src="img/Maria-Rodriguez.jpg" id="img-circular" />
       <br/>
       <br/>
-      <pre>
+      <pre><h5>
         Hola a todos !!! 
         Soy María y vivo en Salto, Uruguay.        
         Me considero apasionada por la ciencia y la tecnología. 
         Actualmente me encuentro dando mis primeros pasos en el mundo del desarrollo de software.
         Soy curiosa y me gusta aprender cosas nuevas, también me considero muy observadora y analítica.
+      </h5> 
       </pre>
     </article>
   </section>
@@ -70,6 +71,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
 </body>
 </html>
+
+
 
 
 
