--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet"   href="css/archivo-estilos.css" type="text/css"    />
     <title>Maria Rodriguez</title>
 </head>
-<body background="img/background3.png" >
+<body>
     <nav class="navbar navbar-expand-lg navbar-dark bg">
       <a class="navbar-brand"><i class="fa-solid fa-house"></i></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -40,7 +40,7 @@
 </svg>
 </div>
     <section>
-    <article class="centrar-contenido"><img src="img/Maria-Rodriguez.jpg" id="img-circular" />
+    <article class="centrar-contenido"><img src="img/imagen.jpg" id="img-circular" />
       <br/>
       <br/>
       <pre><h5>
@@ -58,7 +58,7 @@
       <footer>
       <p><a href="https://www.github.com/MariaRod123/"  target="_blank" class="github"><i class="fa-brands fa-github"></i></a>
         <a href="https://www.linkedin.com/in/maria-alejandra-rodriguez-piriz/" target="_blank" class="linkedin"><i class="fa-brands fa-linkedin"></i></a>
-        <a href="https://drive.google.com/drive/folders/1J0TD_efb2HJY43kBvqzZ626-NTfz7pfS" target="_blank" class="curriculum"><i class="fa-solid fa-file"></i></i></a>
+       
         <a href="https://www.youtube.com/channel/UC3e8_SA0TDSOl7CeolHaplQ" target="_blank" class="youtube"><i class="fa-brands fa-youtube"></i></a>
         <a href="mailto:marodriguezpiriz08@gmail.com" class="correo"><i class="fa-solid fa-envelope"></i></a>
       </p>
